@@ -25,7 +25,7 @@
 	var formulisSettings = {
 		serverAdress: "http://127.0.0.1:9999/",
 		uriBaseAdress: "http://www.irisa.fr/LIS/sewelis/",
-		logServerAdress: "http://servolis.irisa.fr:3941" // Used in IRISA experiment, unused for now
+		logStoreName: "storeba9a9d" // Used in IRISA experiments
 	};
     </script>
     <!-- The actual FORMULIS compiled code -->
